apps/polinetcc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polinetcc
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
