apps/polinetcc/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: polinetcc-service
spec:
  selector:
    app: polinetcc
  ports:
    - name: polinetcc
      port: 6111
      targetPort: 6111
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polinetcc
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: polinetcc
  template:
    metadata:
      labels:
        app: polinetcc
    spec:
      containers:
        - name: polinetcc
          image: ghcr.io/polinetworkorg/polinet.cc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6111
          startupProbe:
            tcpSocket:
              port: 6111
            periodSeconds: 2
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 6111
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 6111
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "10m"
              memory: "160Mi"
            limits:
              memory: "320Mi"
